# swa-bofl

./: .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
cfngin/templates/: agbd-analytics-etl-glue-job.j2  agbd-analytics-etl-redshift-job.j2
cfngin/templates/macros/: macros.jinja
integration/: runtests_local.sh  update_integration.py
integration/deployments/: 00-main.yml
integration/environment/: vars.env
integration/environment/local/test1/: 100-agbd-bofl-etl-module.yml  400-s3-module.yml  vars.env
integration/gitlab/: checkout_account.py  get_aws_credentials.py  process_result.py  setup_tests.sh  teardown_tests.sh  verify_account.py
integration/local/decp-agbd-analytics-etl-module/: README.md  docker-compose.yml  package.json  release.config.js
integration/local/decp-agbd-analytics-etl-module/cfngin/templates/: agbd-analytics-etl-glue.j2
integration/local/decp-agbd-analytics-etl-module/src/: .gitignore
integration/runway/: .shared.sh  README.md  entrypoint.sh  entrypoint_env_yml.sh  module_config.json  preflight.sh  runway.variables.yml  runway.yml
integration/runway/.runway/checkov/reports/100-agbd-bofl-etl-module/: us-east-1.x322451-local-test1-agbd-analytics-etl-glue.json
integration/runway/.runway/checkov/reports/400-s3-module/: us-east-1.x322451-local-test1-s3-bucket-4xxerrors-alarms.json  us-east-1.x335495-local-test1-s3-bucket.json
integration/runway/100-agbd-bofl-etl-module/: Makefile  local-deploy.sh  requirements.txt  stacker.yaml  test1-cfg  test1.env
integration/runway/100-agbd-bofl-etl-module/boto3-1.38.15.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/boto3-1.38.4.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/botocore-1.38.15.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/botocore-1.38.4.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs/: __init__.py  utils.py
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs-5.14.0.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs/helpers/: iam.py  kms.py  ssm.py
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs/hooks/: __init__.py  _ccplat_common_hooks.py  _configure_cross_region_replication.py  _create_module_ssm_parameters.py  _delete_custom_parameters.py  _delete_module_ssm_parameters.py  _deploy_lz_artifacts.py  _ensure_apigateway_service_role.py  _ensure_autoscaling_service_role.py  _validate_config.py  _validate_subnets.py
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs/hooks/global_params/: __init__.py  handle_global_params.py
integration/runway/100-agbd-bofl-etl-module/ccplatcfnginlibs/lookups/: _ccp.py  _configs.py  _hz_exists.py  _hz_region.py  _log_retention.py  _s3_prefix_list_id.py  _ssm_param.py  _stack_outputs.py  _subnet_cidrs.py
integration/runway/100-agbd-bofl-etl-module/cfngin/cloudformation/: rejects_warnings_alerts.yml  sns_alerts.yml
integration/runway/100-agbd-bofl-etl-module/decputilities-1.7.2.dist-info/: METADATA  RECORD  top_level.txt
integration/runway/100-agbd-bofl-etl-module/decputilities/hooks/: publishAirflowDAGs.py
integration/runway/100-agbd-bofl-etl-module/decputilities/libs/: __init__.py  decp_redshift_connection_helper.py  decp_teradata_connection_helper.py
integration/runway/100-agbd-bofl-etl-module/decputilities/lookups/: getDataApplicationRole.py  getDataProducerRole.py  getGlueConnection.py
integration/runway/100-agbd-bofl-etl-module/hooks/: upload_to_s3.py
integration/runway/100-agbd-bofl-etl-module/jmespath-1.0.1.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/pycryptodome-3.22.0.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/s3transfer-0.12.0.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/src/schemas/: bofl_schema.py
integration/runway/100-agbd-bofl-etl-module/teradatasql/: README.md
integration/runway/100-agbd-bofl-etl-module/teradatasql-17.20.0.32.dist-info/: RECORD
integration/runway/100-agbd-bofl-etl-module/test/: __init__.py
integration/runway/100-agbd-bofl-etl-module/test/unit_test/: test_upload_to_s3.py
integration/runway/400-s3-module/: .checkov.yml  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  stacker.yaml  test1-cfg  test1.env
integration/runway/400-s3-module/ccplatcfnginlibs/: constants.py
integration/runway/400-s3-module/ccplatcfnginlibs-5.14.0.dist-info/: METADATA
integration/runway/400-s3-module/ccplatcfnginlibs/helpers/: cloudformation.py  cloudwatch.py  ec2.py  hooks.py  kubectl.py  lz_deployer.py  route53.py  sts.py
integration/runway/400-s3-module/ccplatcfnginlibs/hooks/: _configure_stack_name.py  _create_custom_parameters.py  _delete_cross_region_replication_role.py  _empty_buckets.py  _validate_subnets_yaml.py  _validate_vpc_version.py
integration/runway/400-s3-module/ccplatcfnginlibs/lookups/: __init__.py  _available_subnets.py  _cx_param_ref.py  _duplicate_hz_id.py  _hz_id.py  _hz_name.py
integration/runway/400-s3-module/cfngin/templates/: s3-4xxerrors-alarms.yml.j2  s3-5xxerrors-alarms.yml.j2  s3-delete-requests-alarms.yml.j2  s3-replication-latency-alarms.yml.j2  s3.yml.j2
src/: agbd-bofl-evnt-analytics-hudi-load.py
src/schemas/: bofl_schema.py
